--- a/templates/extension/sidebar.html.twig
+++ b/templates/extension/sidebar.html.twig
@@ -17,7 +17,7 @@
                 <img src="{{ asset("dist/img/user2-160x160.jpg") }}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">{{ app.user.username }}</a>
+{#                <a href="#" class="d-block">{{ app.user.personnel.nomComplet }}</a>#}
             </div>
         </div>
 
