--- a/templates/profile/profile.html.twig
+++ b/templates/profile/profile.html.twig
@@ -8,12 +8,12 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>AFFECTER UN AGENT</h1>
+                    <h1>PROFILE</h1>
                 </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                        <li class="breadcrumb-item active">Affecter un agent</li>
+                        <li class="breadcrumb-item"><a href="#">Personnel</a></li>
+                        <li class="breadcrumb-item active">Mon profile</li>
                     </ol>
                 </div>
             </div>
@@ -24,98 +24,13 @@
     <section class="content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
-                    <!-- Widget: user widget style 2 -->
-                    <div class="card card-widget widget-user-2">
-                        <!-- Add the bg color to the header using any of the bg-* classes -->
-                        <div class="widget-user-header bg-warning">
-                            <div class="widget-user-image">
-                                <img class="img-circle elevation-2" src="../dist/img/user7-128x128.jpg" alt="User Avatar">
-                            </div>
-                            <!-- /.widget-user-image -->
-                            <h3 class="widget-user-username">Nadia Carmichael</h3>
-                            <h5 class="widget-user-desc">Lead Developer</h5>
-                        </div>
-                        <div class="card-footer p-0">
-                            <ul class="nav flex-column">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Projects <span class="float-right badge bg-primary">31</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Tasks <span class="float-right badge bg-info">5</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Completed Projects <span class="float-right badge bg-success">12</span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        Followers <span class="float-right badge bg-danger">842</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- /.widget-user -->
-                </div>
-                <!-- /.col -->
-                <div class="col-md-4">
+                <div class="col-md-12">
                     <!-- Widget: user widget style 1 -->
                     <div class="card card-widget widget-user">
                         <!-- Add the bg color to the header using any of the bg-* classes -->
                         <div class="widget-user-header bg-info">
-                            <h3 class="widget-user-username">Alexander Pierce</h3>
-                            <h5 class="widget-user-desc">Founder & CEO</h5>
-                        </div>
-                        <div class="widget-user-image">
-                            <img class="img-circle elevation-2" src="../dist/img/user1-128x128.jpg" alt="User Avatar">
-                        </div>
-                        <div class="card-footer">
-                            <div class="row">
-                                <div class="col-sm-4 border-right">
-                                    <div class="description-block">
-                                        <h5 class="description-header">3,200</h5>
-                                        <span class="description-text">SALES</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-sm-4 border-right">
-                                    <div class="description-block">
-                                        <h5 class="description-header">13,000</h5>
-                                        <span class="description-text">FOLLOWERS</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                                <!-- /.col -->
-                                <div class="col-sm-4">
-                                    <div class="description-block">
-                                        <h5 class="description-header">35</h5>
-                                        <span class="description-text">PRODUCTS</span>
-                                    </div>
-                                    <!-- /.description-block -->
-                                </div>
-                                <!-- /.col -->
-                            </div>
-                            <!-- /.row -->
-                        </div>
-                    </div>
-                    <!-- /.widget-user -->
-                </div>
-                <!-- /.col -->
-                <div class="col-md-4">
-                    <!-- Widget: user widget style 1 -->
-                    <div class="card card-widget widget-user">
-                        <!-- Add the bg color to the header using any of the bg-* classes -->
-                        <div class="widget-user-header text-white"
-                             style="background: url('../dist/img/photo1.png') center center;">
-                            <h3 class="widget-user-username text-right">Elizabeth Pierce</h3>
-                            <h5 class="widget-user-desc text-right">Web Designer</h5>
+                            <h3 class="widget-user-username text-center">{{ app.user.personnel.nomComplet }}</h3>
+                            <h5 class="widget-user-desc text-center">{{ app.user.personnel.fonction.nom }}</h5>
                         </div>
                         <div class="widget-user-image">
                             <img class="img-circle" src="../dist/img/user3-128x128.jpg" alt="User Avatar">
@@ -124,24 +39,24 @@
                             <div class="row">
                                 <div class="col-sm-4 border-right">
                                     <div class="description-block">
-                                        <h5 class="description-header">3,200</h5>
-                                        <span class="description-text">SALES</span>
+                                        <h5 class="description-header">MATRICULE</h5>
+                                        <span class="description-text">{{ app.user.personnel.matricule }}</span>
                                     </div>
                                     <!-- /.description-block -->
                                 </div>
                                 <!-- /.col -->
                                 <div class="col-sm-4 border-right">
                                     <div class="description-block">
-                                        <h5 class="description-header">13,000</h5>
-                                        <span class="description-text">FOLLOWERS</span>
+                                        <h5 class="description-header">DEPARTEMENT</h5>
+                                        <span class="description-text">{{ app.user.personnel.departement.nomDepartement }}</span>
                                     </div>
                                     <!-- /.description-block -->
                                 </div>
                                 <!-- /.col -->
                                 <div class="col-sm-4">
                                     <div class="description-block">
-                                        <h5 class="description-header">35</h5>
-                                        <span class="description-text">PRODUCTS</span>
+                                        <h5 class="description-header">GRADE</h5>
+                                        <span class="description-text">{{ app.user.personnel.grade.nom }}</span>
                                     </div>
                                     <!-- /.description-block -->
                                 </div>
@@ -153,6 +68,151 @@
                     <!-- /.widget-user -->
                 </div>
                 <!-- /.col -->
+                <div class="col-md-12">
+                    <!-- Main content -->
+                    <section class="content">
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <a href="mailbox.html" class="btn btn-info btn-block mb-3">Back to Inbox</a>
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h3 class="card-title">Folders</h3>
+
+                                            <div class="card-tools">
+                                                <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="card-body p-0">
+                                            <ul class="nav nav-pills flex-column">
+                                                <li class="nav-item active">
+                                                    <a href="#" class="nav-link">
+                                                        <i class="fas fa-inbox"></i> Inbox
+                                                        <span class="badge bg-primary float-right">12</span>
+                                                    </a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a href="#" class="nav-link">
+                                                        <i class="far fa-envelope"></i> Sent
+                                                    </a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a href="#" class="nav-link">
+                                                        <i class="far fa-file-alt"></i> Drafts
+                                                    </a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a href="#" class="nav-link">
+                                                        <i class="fas fa-filter"></i> Junk
+                                                        <span class="badge bg-warning float-right">65</span>
+                                                    </a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a href="#" class="nav-link">
+                                                        <i class="far fa-trash-alt"></i> Trash
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <!-- /.card-body -->
+                                    </div>
+                                    <!-- /.card -->
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h3 class="card-title">Labels</h3>
+
+                                            <div class="card-tools">
+                                                <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <!-- /.card-header -->
+                                        <div class="card-body p-0">
+                                            <ul class="nav nav-pills flex-column">
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#"><i class="far fa-circle text-danger"></i> Important</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#"><i class="far fa-circle text-warning"></i> Promotions</a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a class="nav-link" href="#"><i class="far fa-circle text-primary"></i> Social</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <!-- /.card-body -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col -->
+                                <div class="col-md-9">
+                                    <div class="card card-primary card-outline">
+                                        <div class="card-header">
+                                            <h3 class="card-title">Demander un congé</h3>
+                                        </div>
+                                        <!-- /.card-header -->
+                                        <div class="card-body">
+                                            <div class="form-group">
+                                                <input class="form-control" placeholder="To:">
+                                            </div>
+                                            <div class="form-group">
+                                                <input class="form-control" placeholder="Subject:">
+                                            </div>
+                                            <div class="form-group">
+                    <textarea id="compose-textarea" class="form-control" style="height: 300px">
+                      <h1><u>Heading Of Message</u></h1>
+                      <h4>Subheading</h4>
+                      <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain
+                        was born and I will give you a complete account of the system, and expound the actual teachings
+                        of the great explorer of the truth, the master-builder of human happiness. No one rejects,
+                        dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know
+                        how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again
+                        is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain,
+                        but because occasionally circumstances occur in which toil and pain can procure him some great
+                        pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise,
+                        except to obtain some advantage from it? But who has any right to find fault with a man who
+                        chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that
+                        produces no resultant pleasure? On the other hand, we denounce with righteous indignation and
+                        dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so
+                        blinded by desire, that they cannot foresee</p>
+                      <ul>
+                        <li>List item one</li>
+                        <li>List item two</li>
+                        <li>List item three</li>
+                        <li>List item four</li>
+                      </ul>
+                      <p>Thank you,</p>
+                      <p>John Doe</p>
+                    </textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="btn btn-default btn-file">
+                                                    <i class="fas fa-paperclip"></i> Attachment
+                                                    <input type="file" name="attachment">
+                                                </div>
+                                                <p class="help-block">Max. 32MB</p>
+                                            </div>
+                                        </div>
+                                        <!-- /.card-body -->
+                                        <div class="card-footer">
+                                            <div class="float-right">
+                                                <button type="button" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Draft</button>
+                                                <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Send</button>
+                                            </div>
+                                            <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> Discard</button>
+                                        </div>
+                                        <!-- /.card-footer -->
+                                    </div>
+                                    <!-- /.card -->
+                                </div>
+                                <!-- /.col -->
+                            </div>
+                            <!-- /.row -->
+                        </div><!-- /.container-fluid -->
+                    </section>
+                    <!-- /.content -->
+                </div>
             </div>
             <!-- /.row -->
 
