--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,12 +16,15 @@
             <link rel="stylesheet" href="{{ asset("dist/css/adminlte.min.css") }}">
             <!-- Google Font: Source Sans Pro -->
             <link href="{{ asset("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700") }}" rel="stylesheet">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.css" integrity="sha256-uq9PNlMzB+1h01Ij9cx7zeE2OR2pLAfRw3uUUOOPKdA=" crossorigin="anonymous">
 {#            <link href="{{ asset("https://bootswatch.com/4/materia/bootstrap.min.css") }}" rel="stylesheet">#}
+
         </head>
     </head>
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
+            <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.4.0/main.min.js" integrity="sha256-oenhI3DRqaPoTMAVBBzQUjOKPEdbdFFtTCNIosGwro0=" crossorigin="anonymous"></script>
             <!-- jQuery -->
             <script src="{{ asset("assets/jquery/jquery.min.js") }}"></script>
             <!-- Bootstrap 4 -->
