--- a/templates/personal/index.html.twig
+++ b/templates/personal/index.html.twig
@@ -3,18 +3,11 @@
 {% block title %}Hello PersonalController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/jessy/Documents/hgrproject/src/Controller/PersonalController.php'|file_link(0) }}">src/Controller/PersonalController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/jessy/Documents/hgrproject/templates/personal/fonction.html.twig'|file_link(0) }}">templates/personal/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <h1>Nouveau contact</h1>
+{{ form_start(contactForm) }}
+{{ form_row(contactForm.nom) }}
+{{ form_row(contactForm.email) }}
+{{ form_row(contactForm.message) }}
+    <button class="btn btn-primary">Envoyer</button>
+{{ form_end(contactForm) }}
 {% endblock %}
