Time off manager

--- a/templates/extension/sidebar.html.twig
+++ b/templates/extension/sidebar.html.twig
@@ -44,7 +44,7 @@
                 </li>
                 <li class="nav-header">GESTION DE CONGE</li>
                 <li class="nav-item">
-                    <a href="{{ path("leave") }}" class="nav-link">
+                    <a href="{{ path("demande_conge_index") }}" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
                         <p>
                             Conge
